test/libyul/yulSyntaxTests/if_statement_fail_3.yul
{ if 42:u256 { } }
// ====
// dialect: evmTyped
// ----
// TypeError 1733: (5-12='42:u256'): Expected a value of boolean type "bool" but got "u256"
